--- a/记一次懒癌发作引发的代码重构：动态加载模块.md
+++ b/记一次懒癌发作引发的代码重构：动态加载模块.md
@@ -1,5 +1,6 @@
 ### 前言
-ES6 import()方法，动态加载模块初体验。这是一个过程曲折、结局温暖的动人故事。  
+这是一个过程曲折、结局温暖的动人故事。  
+知识点：ES6 import()动态加载模块和webpack的require.context。
 ### 先看下重构前的代码
 ```js
 // mock/index.js
@@ -153,6 +154,28 @@ setTimeout(() => {
   })
 }, useMock ? 100 : 0)
 ```
-### 写在最后
-看到这里的大佬，我厚着脸皮求点个赞不过分吧？想升级……
+### 使用require.context实现免配置
+经评论区[蛋蛋大神](https://juejin.im/user/2576910987834110)的指点，使用webpack的[require.context](https://webpack.docschina.org/guides/dependency-management/#requirecontext)读取文件列表，达成了免配置效果！  
+以后有新增的话只在data目录下添加js文件就好……  
+最终代码：
+```js
+// mock/index.js
+import Mock from 'mockjs'
 
+const dataFilesContexts = require.context('./data', false, /\.js$/)
+const urls = dataFilesContexts.keys().map(item => {
+  //从uri中匹配出文件名
+  const fileNameArr = item.match(/(?<=\/).*(?=.js)/) || []
+  return fileNameArr[0]
+})
+
+for (let i = 0; i < urls.length; i++) {
+  const url = urls[i]
+  // 动态加载模块
+  import(`./data/${url}.js`).then(data => {
+    Mock.mock(new RegExp(`${url}$`), data.default)
+  })
+}
+```
+### 写在最后
+把新增操作从需要“复制3次粘贴6次”降到了0次。CV程序员这帽子我就……先摘了？嘿嘿 
